--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,17 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400);
 
 body {
-font: normal normal 13px/16px "Open Sans", sans-serif;
-background: #dfdfdf;
+    /* font: normal normal 13px/16px "Open Sans", sans-serif; */
 }
 
 .container{
-padding: 20px;
-width: 300px;
-margin: 0 auto;
-margin-top: 40px;
-background: white;
-border-radius: 5px;}
+    padding: 20px;
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 110px;
+    background: white;
+    border-radius: 5px;
+}
 
 #inputBox.error {
     border: 1px solid red;
@@ -19,7 +19,7 @@ border-radius: 5px;}
     padding: 10px;
 }
 
-#inputBox.error label {
+#inputBox label.error {
     padding-top: 5px;
     display: inline-block;
     font-style: italic;
@@ -33,21 +33,8 @@ input{
 padding: 4px 15px 4px 5px;
 }
 
-#button{
-display: inline-block;
-background-color:#fc999b;
-color:#ffffff;
-border-radius: 5px;
-text-align:center;
-margin-top:2px;
-padding: 5px 15px;
-}
-
-#button:hover{
-cursor: pointer;
-opacity: .8;}
-
 ol {padding-left: 20px;}
+ol.hasItems { margin-top: 30px; }
 
 ol li {padding: 5px;color:#000;}
 
@@ -64,11 +51,11 @@ ol li:nth-child(even){background: #dfdfdf;}
 }
 
 .deleteItem {
-    padding: 0 4px 1px;
+    padding: 0 4px 3px;
     border: 1px solid #b3b3b3;
     position: absolute;
     right: 4px;
-    top: 4px;
+    top: 5px;
     line-height: 1.2;
     color: #595959;
     transition: all 0.5s linear;
